--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <title>Home Page</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="./index.css">
+        <link rel="stylesheet" href="resume maker/index.css">
     </head>
     <body>
 
@@ -15,7 +15,7 @@
                 <div class = "navbar-content">
                     <div class = "brand-and-toggler">
                         <a href = "index.html" class = "navbar-brand">
-                            <img src = "./curriculum-vitae.png" alt = "" class = "navbar-brand-icon">
+                            <img src = "resume maker/curriculum-vitae.png" alt = "" class = "navbar-brand-icon">
                             <span class = "navbar-brand-text">build <span>resume.</span>
                         </a>
                         <button type = "button" class = "navbar-toggler-btn">
@@ -36,7 +36,7 @@
                     <h6 class = "text-uppercase text-blue-dark fs-14 fw-6 ls-1">online resume builder</h6>
                     <h1 class = "lg-title">Only 2% of resumes make it pas the first round. Be in the top 2%</h1>
                     <p class = "text-dark fs-18">Use professional field-tested resume templates that follow that exact 'resume rules' employers look for. Easy to use and done within minutes - try now for free!</p>
-                    <a href = "resume.html" class = "btn btn-primary text-uppercase">create my resume</a>
+                    <a href = "resume maker/resume.html" class = "btn btn-primary text-uppercase">create my resume</a>
                     <img src = "dublin-resume-templates.avif">
                 </div>
             </div>
@@ -46,13 +46,13 @@
             <div class="container">
                 <div class = "section-one-content">
                     <div class="section-one-l">
-                        <img src = "./visual1.svg">
+                        <img src = "resume maker/visual1.svg">
                     </div>
                     <div class = "section-one-r text-center">
                         <h2 class = "lg-title">Use the best resume maker as your guide!</h2>
                         <p class = "text">Getting that dream job can seem like an impossible task. We're here to change that. Give yourself a real advantage with the best online resume maker: created by experts, imporved by data, trusted by millions of professionals.</p>
                         <div class = "btn-group">
-                            <a href = "resume.html" class = "btn btn-primary text-uppercase">create my resume</a>
+                            <a href = "resume maker/resume.html" class = "btn btn-primary text-uppercase">create my resume</a>
                             <a href = "#" class = "btn btn-secondary text-uppercase">watch video</a>
                         </div>
                     </div>
@@ -66,7 +66,7 @@
                     <div class = "section-items">
                         <div class = "section-item">
                             <div class = "section-item-icon">
-                                <img src = "./cup1.svg" alt = "">
+                                <img src = "resume maker/cup1.svg" alt = "">
                             </div>
                             <h5 class = "section-item-title">Make a resume that wins interviews!</h5>
                             <p class = "text">Use our resume maker with its advanced creation tools to tell professional story that engages recruiters, hiring managers and even CEOs.</p>
@@ -74,7 +74,7 @@
 
                         <div class = "section-item">
                             <div class = "section-item-icon">
-                                <img src = "./cup2.svg" alt = "">
+                                <img src = "resume maker/cup2.svg" alt = "">
                             </div>
                             <h5 class = "section-item-title">Resume writing made easy!</h5>
                             <p class = "text">Resume writing has never been this effortless. Pre-generated text, visual designs and more - all already integrated into the resume maker. Just fill in your details.</p>
@@ -82,7 +82,7 @@
 
                         <div class = "section-item">
                             <div class = "section-item-icon">
-                                <img src = "./cup3.svg" alt = "">
+                                <img src = "resume maker/cup3.svg" alt = "">
                             </div>
                             <h5 class = "section-item-title">A recruiter-tested CV maker tool</h5>
                             <p class = "text">Our resume builder and its pre-generated content are tested by recruiters and IT experts. We help your CV become truly competitive in the hiring process.</p>
